(fix): Dark Mode
~ Sidebar icons
~ Section header text

--- a/src/components/grid/grid.module.scss
+++ b/src/components/grid/grid.module.scss
@@ -14,7 +14,7 @@
 }
 
 .label {
-  color: #5f6368;
+  color: var(--section-header);
   letter-spacing: 0.07272727em;
   font-size: 0.6875rem;
   font-weight: 500;
