--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -13,10 +13,6 @@
   list-style: none;
 }
 
-body.dark .sidebar__item svg {
-  fill: #fff;
-}
-
 .sidebar__item li {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
